  * [General] Made tenant optional for all API calls
  * [ConfigS] Moved MinCallDuration,MaxCallDuration from sessions config to general config
  * [StatS] Added support for nested fields in custom metrics
  * [AccountS] Add Initial in AccountSummary as initail value before debit operation
  * [General] For only *asap actions don't save AccountIDs withing ActionPlans
  * [AnalyzerS] Added AnalyzerSv1.StringQuery API to search over the recorded RPC calls
  * [CoreS] Moved the server implementation in the new cores package
  * [RouteS] In case of same weight sort random
  * [ConfigS] Renamed ReloadConfigFromPath API to ReloadConfig
  * [ConfigS] Renamed ReloadConfig API to SetConfig
  * [ConfigS] Renamed ReloadConfigFromJSON API to SetConfigFromJSON
  * [CDRs] Replaced RSRField with RSRParser
  * [RouteS] Add new field RouteRateProfileIDs in RateProfiles.csv
  * [DispatcherS] Removed connection pool from DispatcherHost structure
  * [DispatcherS] Updated *broadcast, *broadcast_sync and *broadcast_async to behave similar to RPCPool
  
 -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100